# luai

./: Cargo.toml  LICENSE  README.md  zkvm-prove.sh
bench/: run.py  speed.py
bench/tasks/01_price_lookup/: responses.json  task.lua  trace_openai.json
bench/tasks/02_search_filter/: responses.json  task.lua  trace_openai.json
bench/tasks/03_chained_lookup/: responses.json  task.lua  trace_openai.json
compiler/: Cargo.toml
compiler/src/: main.rs
examples/: bench_speed.rs  large-response-langchain.py  large-response-processing.sh  multichain-score-langchain.py  multichain-score-wallet.sh  prediction_market.lua  prover.lua  requirements.txt  score-wallet-langchain.py  score-wallet.sh  simple.lua  system.lua  tools.lua
luai-guest/: Cargo.toml
luai-guest/src/: main.rs
luai-prover/: Cargo.toml
luai-prover/src/: lib.rs  prover.rs  verifier.rs
openvm/: Cargo.toml  proof-app.sh
openvm/src/: encoder.rs  main.rs
orchestrator/: Cargo.toml
orchestrator/src/: llm.rs  main.rs  pipeline.rs  prompt.rs  prove.rs  tools.rs
prover/: Cargo.toml
prover/src/: host.rs  lib.rs  main.rs  prover.rs
src/: lib.rs  main.rs
src/bytecode/: mod.rs  verifier.rs
src/compiler/: codegen.rs  error.rs  mod.rs  proto.rs
src/host/: canonicalize.rs  mod.rs  tape.rs  tool_registry.rs  transcript.rs
src/parser/: ast.rs  lexer.rs  mod.rs
src/types/: mod.rs  table.rs  value.rs
src/vm/: builtins.rs  engine.rs  gas.rs  memory.rs  mod.rs
src/zkvm/: commitment.rs  guest_input.rs  mod.rs
tests/: builtins.rs  compiler.rs  integration.rs  json.rs  tools.rs
