[package]
name = "luai-orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
luai = { path = "..", features = ["serde", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
dotenvy = "0.15"

[[bin]]
name = "luai-orchestrator"
path = "src/main.rs"
